--- a/src/app/register-component/register-component.component.html
+++ b/src/app/register-component/register-component.component.html
@@ -16,9 +16,11 @@
             <!-- <mat-label>Email</mat-label> -->
             <input matInput 
                    placeholder="FullName" formControlName='fullName'>
+                   <mat-error  *ngIf="this.userform.get('fullName').touched || this.userform.get('fullName').errors" >
+                    Name should not below 5 letters & above 12 letters 
+                  </mat-error>
     
   
-            
             
           </mat-form-field>
 
@@ -33,18 +35,22 @@
 
 
         <mat-form-field class="example-full-width">
-          <!-- <mat-label>Email</mat-label> -->
+    
           <input matInput 
                  placeholder="Email" formControlName='email'>
 
-   
+                 <mat-error  *ngIf="this.userform.get('email').errors && this.userform.get('email').errors.invalidemail " >
+                  Please enter a valid email address
+                </mat-error>
           
         </mat-form-field>
-          <!-- <mat-label>password</mat-label> -->
+  
           <mat-form-field class="example-full-width">
           <input matInput type="password" 
                  placeholder="password" formControlName='password'>
-      
+                 <mat-error  *ngIf="this.userform.get('password').touched || this.userform.get('password').errors" >
+                  password B/W 8 to 12 letters 
+                 </mat-error>
   
         </mat-form-field>
 
@@ -72,7 +78,12 @@
 
 
 
-          
+    <div *ngIf='diserror' class="col-sm-4" [ngClass]="isSucuess==true ? 'loginerror':'loginerror1'">
+      <div class="alert alert-warning alert-dismissible"  >
+         
+          <strong [ngClass]="isSucuess===true ? 'loginerror3':'loginerror2'">{{message}}</strong>
+        </div>
+      </div>
          
   </body>
 
